--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@mantine/core": "^6.0.18",
+    "@mantine/hooks": "^6.0.18",
+    "@mantine/notifications": "^6.0.18",
+    "@tauri-apps/api": "^1.4.0",
+    "immer": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@tauri-apps/api": "^1.4.0"
+    "react-router-dom": "^6.14.2",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^1.4.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.4",
-    "@tauri-apps/cli": "^1.4.0"
+    "vite": "^4.4.4"
   }
 }
