--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,16 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable"
+    ],
     "module": "ESNext",
     "skipLibCheck": true,
+    "esModuleInterop": true,
+    "baseUrl": "./",
+    "allowJs": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -18,7 +25,15 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "$components/*": [
+        "src/components/*"
+      ],
+      "$constants/*": [
+        "src/constants/*"
+      ],
+    },
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
