--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^6.0.18",
     "@mantine/hooks": "^6.0.18",
     "@mantine/notifications": "^6.0.18",
+    "@tabler/icons-react": "^2.30.0",
     "@tauri-apps/api": "^1.4.0",
     "immer": "^10.0.2",
     "react": "^18.2.0",
