--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,8 +33,14 @@
       "$constants/*": [
         "src/constants/*"
       ],
+      "$hooks/*": [
+        "src/hooks/*"
+      ],
       "$routes/*": [
         "src/routes/*"
+      ],
+      "$store/*": [
+        "src/store/*"
       ],
       "$types/*": [
         "src/types/*"
