--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/notifications": "^6.0.18",
     "@tabler/icons-react": "^2.30.0",
     "@tauri-apps/api": "^1.4.0",
+    "axios": "^1.4.0",
     "immer": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
