--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tabler/icons-react": "^2.30.0",
     "@tauri-apps/api": "^1.4.0",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "immer": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
