--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,9 @@
       "$constants/*": [
         "src/constants/*"
       ],
+      "$helpers/*": [
+        "src/helpers/*"
+      ],
       "$hooks/*": [
         "src/hooks/*"
       ],
