--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "immer": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.12.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
     "zustand": "^4.4.1"
