--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "typescript": "^5.1.6",
     "vite": "^4.4.9",
     "vite-tsconfig-paths": "^4.2.0"
+  },
+  "engines": {
+    "node": "^16",
+    "npm": "^8"
   }
 }
