--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,9 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "paths": {
+      "$api": [
+        "src/api/index.ts"
+      ],
       "$components/*": [
         "src/components/*"
       ],
